<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_item_main"
            android:icon="@android:drawable/ic_menu_compass"
            android:title="@string/menu_running"/>

        <item
            android:id="@+id/nav_item_record"
            android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/menu_record"/>

        <item
            android:id="@+id/nav_item_music"
            android:icon="@drawable/ic_music"
            android:title="@string/menu_music"/>
        
        <!-- Added new workout routines menu item -->
        <item
            android:id="@+id/nav_item_workout_routines"
            android:icon="@android:drawable/ic_menu_preferences"
            android:title="Rutinas de Entrenamiento"/>

        <!-- Added exercise progress tracking menu item -->
        <item
            android:id="@+id/nav_item_exercise_progress"
            android:icon="@android:drawable/ic_menu_sort_alphabetically"
            android:title="Progreso de Ejercicios"/>

        <!-- Added hydration monitoring menu item -->
        <item
            android:id="@+id/nav_item_hydration"
            android:icon="@android:drawable/ic_menu_view"
            android:title="Hidratación"/>
        
        <!-- Fixed trophy icon to use available system icon -->
        <item
            android:id="@+id/nav_item_achievements"
            android:icon="@android:drawable/ic_menu_sort_by_size"
            android:title="Logros y Reconocimientos"/>

        <!-- Added new Goals system menu item with available icon -->
        <item
            android:id="@+id/nav_item_goals"
            android:icon="@android:drawable/ic_menu_agenda"
            android:title="Sistema de Metas"/>

        <!-- Enhanced statistics menu item -->
        <item
            android:id="@+id/nav_item_statistics"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="Estadísticas Avanzadas"/>

        <!-- Added BMI Calculator menu item -->
        <item
            android:id="@+id/nav_item_bmi_calculator"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="Calculadora IMC"/>

    </group>

    <item android:title="@string/menu_account">
        <menu>
            <item
                android:id="@+id/nav_item_clearpreferences"
                android:icon="@android:drawable/ic_popup_sync"
                android:title="@string/menu_clearpreferences"/>

            <item
                android:id="@+id/nav_item_signout"
                android:icon="@android:drawable/ic_menu_close_clear_cancel"
                android:title="@string/menu_signout"/>
        </menu>
    </item>

</menu>
